# flask-dance

./: .coveragerc  .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  CHANGELOG.rst  LICENSE  MANIFEST.in  README.rst  dev-requirements.txt  pyproject.toml  requirements.txt  runtests.py  setup.cfg  setup.py  test-osm.py  tox.ini
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: docs.yml  lint.yml  test.yml
docs/: Makefile  api.rst  backends.rst  concepts.rst  conf.py  consumers.rst  contrib.rst  contributing.rst  custom-services.rst  examples.rst  how-oauth-works.rst  index.rst  install.rst  login-callbacks.rst  logout.rst  make.bat  multi-user.rst  providers.rst  proxies.rst  quickstart.rst  requirements.txt  signals.rst  spelling_wordlist.txt  storages.rst  testing.rst  token-storage.rst  understanding-the-magic.rst
docs/quickstarts/: azure.rst  bitbucket.rst  dropbox.rst  github.rst  google.rst  index.rst  meetup.rst  nylas.rst  registry.rst  slack.rst  sqla-multiuser.rst  twitter-frontend.rst  twitter.rst
flask_dance/: __init__.py  exceptions.py  models.py  utils.py
flask_dance/consumer/: __init__.py  base.py  oauth1.py  oauth2.py  pkce.py  requests.py
flask_dance/contrib/: README.rst  atlassian.py  authentiq.py  azure.py  bitbucket.py  cognito.py  concept2.py  dexcom.py  digitalocean.py  discord.py  dropbox.py  facebook.py  fitbit.py  github.py  gitlab.py  google.py  heroku.py  instagram.py  jira.py  jira_oauth2.py  linkedin.py  meetup.py  nylas.py  okta.py  orcid.py  osm.py  reddit.py  salesforce.py  slack.py  spotify.py  strava.py  twitch.py  twitter.py  vk.py  zoho.py
flask_dance/fixtures/: pytest.py
tests/: conftest.py  requirements.txt  test_models.py  test_utils.py
tests/consumer/: test_base.py  test_oauth1.py  test_oauth2.py  test_requests.py
tests/contrib/: test_atlassian.py  test_authentiq.py  test_azure.py  test_bitbucket.py  test_cognito.py  test_dexcom.py  test_digitalocean.py  test_discord.py  test_dropbox.py  test_facebook.py  test_fitbit.py  test_github.py  test_gitlab.py  test_google.py  test_heroku.py  test_instagram.py  test_jira.py  test_linkedin.py  test_meetup.py  test_nylas.py  test_okta.py  test_orcid.py  test_osm.py  test_reddit.py  test_slack.py  (+7 more)
(+9 files in other folders)
